--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for item in city_indices:\n",
+    "for index in city_indices:\n",
     "    names_and_ranks.append(f'{item + 1}. {city_names[item]}')"
    ]
   },
