--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f'{item + 1}. {city_names[item]}')"
+    "    names_and_ranks.append(f'{index + 1}. {city_names[i]}')"
    ]
   },
   {
