Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f'{index + 1}. {city_names[i]}')"
+    "    names_and_ranks.append(f'{index + 1}. {city_names[index]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
