--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for "
    ]
   },
   {
