Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for "
+    "for index in cities:\n",
+    "    city_"
    ]
   },
   {
