Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities:\n",
-    "    city_"
+    "    city_populations"
    ]
   },
   {
