--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities:\n",
-    "    city_populations = cities['Population']"
+    "    city_populations cities['Population']"
    ]
   },
   {
