--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []\n"
+    "city_areas = []\n",
+    "for item in cities:\n",
+    "    city_areas.append()"
    ]
   },
   {
