Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "source": [
     "city_areas = []\n",
     "for item in cities:\n",
-    "    city_areas.append()"
+    "    city_areas.append(item[''])"
    ]
   },
   {
