Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,13 +398,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for item in cities:\n",
-    "    city_areas.append(item[''])"
+    "    city_areas.append(item['Area'])"
    ]
   },
   {
